--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>For ELENA ❤️</title>
 <link rel="stylesheet" href="style.css">
 </head>
+<script src="sendForm.js"></script>
 <body>
 
 <div class="hearts" id="hearts"></div>
